--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "path-to-regexp": "^7.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
