--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
-    "jwt-decode": "^4.0.0",
+    "jose": "^5.6.3",
     "lucide-react": "^0.407.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
