--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https",
+    "dev": "next dev --experimental-https --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-table": "^8.19.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -35,7 +36,7 @@
     "embla-carousel-react": "^8.1.6",
     "jose": "^5.6.3",
     "lucide-react": "^0.407.0",
-    "next": "14.2.4",
+    "next": "15.0.1",
     "next-themes": "^0.3.0",
     "path-to-regexp": "^7.0.0",
     "react": "^18",
