--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-table": "^8.19.3",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -56,9 +57,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "@typescript-eslint/parser": "^8.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
